# my-drive

./: .env-template  .gitignore  Cargo.toml  Cross.toml  Dockerfile  README.md  ngrok-config.template.toml
cargo/: .config
src/: config_model.rs  default_runner.rs  drive_access.rs  handlebars_utils.rs  main.rs  ngrok_runner.rs  server.rs  telemetry.rs  webservices.rs
src/telemetry/: log.rs  otel.rs
src/webservices/: create_dir.rs  delete_file.rs  folder_contents.rs  index.rs  list_files.rs  query_files.rs  response_renderer.rs  upload_file.rs
src/webservices/utilities/: mod.rs  multitype_input.rs
templates/: confirmation_toast.hbs  file_icon.hbs  files_listing.hbs  files_row.hbs  index.hbs  query_results.hbs  upload_file_summary_message.hbs
