[package]
name = "my-drive"
version = "0.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-files = "0.6.2"
actix-multipart = "0.6.0"
actix-web = "4.3.1"
anyhow = "1.0.72"
dotenv = "0.15.0"
file-format = { version = "0.24.0", features = ["reader"] }
futures = { version = "0.3.28", optional = true }
glob = "0.3.1"
handlebars = { version = "5.1.2", features = ["dir_source"] }
serde = { version = "1.0.174", features = ["derive"] }
serde_json = "1.0.*"
thiserror = "1.0.44"
tracing = "0.1.37"
tracing-actix-web = "0.7.5"
tracing-subscriber = "0.3.17"
ngrok = { version = "0.13.1", optional = true }
toml = { version = "0.8.0", optional = true }

[features]
default = []
ngrok = ["dep:ngrok", "dep:futures", "dep:toml"]
